feature_15 delete, update employee

--- a/src/app/component/content/content-document/edit-document-group-dialog/edit-document-group-dialog.component.html
+++ b/src/app/component/content/content-document/edit-document-group-dialog/edit-document-group-dialog.component.html
@@ -4,12 +4,12 @@
     <form [formGroup]="documentGroupForm" id="ngForm" #documentEditForm="ngForm">
         <mat-form-field style="max-height: 70px;">
           <mat-label>Nazwa grupy</mat-label>
-          <input matInput placeholder="Grupa" formControlName="topic">
+          <input matInput placeholder="Grupa" formControlName="newTopicName">
         </mat-form-field>
     
         <mat-form-field style="max-height: 70px; margin-left: 5px;">
           <mat-label>W kolejności za</mat-label>
-          <mat-select formControlName="order" (selectionChange)="update($event.value)">
+          <mat-select formControlName="topicBeforeThis">
             <mat-option *ngFor="let group of docTypesShadow" [value]="group.topic" >
                 {{group.topic}}
             </mat-option>
