feature_16 scheduler duty component

--- a/src/app/component/left-nav/left-nav.component.html
+++ b/src/app/component/left-nav/left-nav.component.html
@@ -8,4 +8,7 @@
   <button mat-button class="menu-button" (click)="setContent(ContentEnum.DOCUMENT)">
     <span>{{ContentEnum.DOCUMENT | ContentTabDisplay}}</span>
   </button>
+  <button mat-button class="menu-button" (click)="setContent(ContentEnum.DUTY)">
+    <span>{{ContentEnum.DUTY | ContentTabDisplay}}</span>
+  </button>
 </div>
