--- a/src/app/component/main-page/main-page.component.html
+++ b/src/app/component/main-page/main-page.component.html
@@ -15,6 +15,7 @@
         <app-content-home *ngIf="contentType === contentEnum.HOME" />
         <app-content-employee *ngIf="contentType === contentEnum.EMPLOYEE" />
         <app-content-document *ngIf="contentType === contentEnum.DOCUMENT" />
+        <app-content-duty *ngIf="contentType === contentEnum.DUTY" />
       </div>
     </mat-sidenav-content>
 
