--- a/src/app/component/right-nav/duty/duty.component.html
+++ b/src/app/component/right-nav/duty/duty.component.html
@@ -1,24 +1,22 @@
-<div *ngIf="duties$ | async as duties">
-  Dyżury:
-  <div *ngIf="!duties.length">
-    <p> no duties to display !</p>
-  </div>
-
-  <div *ngIf="duties.length" class="card-list">
-    <table>
-      <tr *ngFor="let type of dutyTypes" class="card-list">
-        <td>{{ type }}</td>
-        <table>
-          <tr *ngFor="let card of duties | filterDuty : type" class="duty-card">
-            <td>{{ card.who }}</td>
-            <td>
-              {{ card.startTime }} -
-              {{ card.endTime }}
-            </td>
-          </tr>
-        </table>
-      </tr>
-    </table>
-  </div>
-
+Dyżury:
+<div *ngIf="!duties.length">
+  <p> no duties to display !</p>
 </div>
+
+<div *ngIf="duties.length" class="card-list">
+  <table>
+    <tr *ngFor="let dutyType of dutyTypes" class="card-list">
+      <td>{{ dutyType.shortcut ? dutyType.shortcut : dutyType.type}}</td>
+      <table>
+        <tr *ngFor="let card of duties | filterDuty : dutyType.type" class="duty-card">
+          <td>{{ card.employeeFirstName }} {{ card.employeeLastName }}</td>
+          <td>
+            {{ card.startTime }} -
+            {{ card.endTime }}
+          </td>
+        </tr>
+      </table>
+    </tr>
+  </table>
+</div>
+
