feature_16 new duty dialog, update angular

--- a/src/app/component/content/content-duty/content-duty.component.html
+++ b/src/app/component/content/content-duty/content-duty.component.html
@@ -11,7 +11,8 @@
 
 <div style="margin-top: 10px;">
   <app-horizontal-scheduler [resources]="dutyTypes" [duties]="duties"
-      (currentDateEvent)="prepareDutiesForMonth($event)" (currentDayEvent)="prepareDutyForDay($event)"/>
+      (currentDateEvent)="prepareDutiesForMonth($event)" (currentDayEvent)="prepareDutyForDay($event)"
+      (newDutyEvent)="prepareNewDutyDialog($event)"/>
 
   <app-dail-duty-list [duties]="dailyDuties" [dutyTypes]="dutyTypes"/>
 </div>
