--- a/src/app/component/content/content-duty/horizontal-scheduler/horizontal-scheduler.component.html
+++ b/src/app/component/content/content-duty/horizontal-scheduler/horizontal-scheduler.component.html
@@ -11,7 +11,7 @@
     <div class="scheduler-container">
         <div class="header">
           <div class="cell"> Dzień / &nbsp;Dyżur </div>
-          <div class="cell pointer" *ngFor="let day of days; let i = index" (click)="toggleDay(day)" [ngClass]="i+1===currentDayNumber ? 'event' : ''">
+          <div class="cell pointer" *ngFor="let day of days; let i = index" (click)="toggleDay(day)" [ngClass]="i+1===currentDayNumber ? 'selected-day-event' : ''">
             <div class="day-number">{{ day.dayOfMonth }}</div>
             <div class="day-name">{{ day.name }}</div>
           </div>
@@ -20,7 +20,7 @@
         <div class="body">
           <div class="row" *ngFor="let res of resources">
             <div class="res-column" >{{ res.shortcut.length ? res.shortcut : res.type.length < 5 ? res.type : res.type.substring(0,4).concat('.') }}</div>
-            <div class="cell pointer" *ngFor="let day of days; let i = index" (click)="toggleEvent(day.name, res)"  [ngClass]="i+1===currentDayNumber ? 'event' : ''">
+            <div class="cell pointer" *ngFor="let day of days; let i = index" (click)="toggleEvent(day, res)"  [ngClass]="{'selected-day-event': i+1===currentDayNumber, 'disable-cursor': shouldDisableCursor(i, res)}">
                 <div >
                     <div *ngIf="hasDuty(day, res)">
                       <div *ngIf="isTotalDutyAssigned(day, res); else notTotalDuty" class="progres-flex">
