feature_16 daily duty display, edit duty type

--- a/src/app/component/content/content-duty/duty-acceptance/duty-acceptance.component.html
+++ b/src/app/component/content/content-duty/duty-acceptance/duty-acceptance.component.html
@@ -37,9 +37,12 @@
         </table>
     </div>
 
-    Zakończ rozpatrywanie wniosków
-    <button mat-icon-button (click)="shouldDisplayForm(false)">
-        <mat-icon>remove_circle_outline</mat-icon>
-    </button>
+    <div class="end-flex">
+        Zakończ rozpatrywanie wniosków
+        <button mat-icon-button (click)="shouldDisplayForm(false)">
+            <mat-icon>remove_circle_outline</mat-icon>
+        </button>
+    </div>
+    
     
 </section>
