--- a/src/app/component/content/content-duty/content-duty.component.html
+++ b/src/app/component/content/content-duty/content-duty.component.html
@@ -1,23 +1,28 @@
 <section >
+
   <div class="button-row"> 
-    <button mat-raised-button (click)="addDutyType()" style="margin-left: 5px; background-color: #A89985;" >Zdefinij Rodzaj</button>
+    <button mat-raised-button (click)="addDutyType()" style="margin-left: 5px; background-color: #A89985;" >Zdefiniuj Nowy</button>
+    <button mat-raised-button (click)="editDutyType()" style="margin-left: 5px; background-color: #A89985;" >Edytuj Istniejące</button>
     <button mat-raised-button (click)="acceptDuties()" class="button-with-badge" style="margin-left: 5px; background-color: #A89985;">
       <span class="badge">{{ dutiesToAccept.length }}</span>
       Oczekujące Dyżury
     </button>
   </div>
+
   <div style="margin-bottom: 5px;">
-    <!-- <app-new-employee [teamArrayInput]="teamNames" (newEmployeeEvent)="saveEmployee($event)" style="margin-bottom: 5px;"/> -->
     <app-new-duty-type (newDutyTypeEvent)="saveNewDutyType($event)"/>
+    <app-edit-duty-type [dutyTypes]="dutyTypes" style="margin-bottom: 5px;"/>
     <app-duty-acceptance [duties]="dutiesToAccept" (newDutyAcceptanceEvent)="saveNewDutyAcceptance($event)"/>
   </div>
+
   <mat-divider style="margin-bottom: 5px;"/>
+
+  <div style="margin-top: 10px;">
+    <app-horizontal-scheduler [resources]="dutyTypes" (currentDayEvent)="prepareDutyForDay($event)"
+        (newDutyEvent)="prepareNewDutyDialog($event)"/>
+  </div>
+  
+  <div style="margin-top: 40px;">
+    <app-dail-duty-list [dutyTypes]="dutyTypes" [day]="pickedDay"/>
+  </div>
 </section>
-
-
-<div style="margin-top: 10px;">
-  <app-horizontal-scheduler [resources]="dutyTypes" (currentDayEvent)="prepareDutyForDay($event)"
-      (newDutyEvent)="prepareNewDutyDialog($event)"/>
-
-  <app-dail-duty-list [dutyTypes]="dutyTypes" [day]="pickedDay"/>
-</div>
