--- a/src/app/component/content/content-duty/dail-duty-list/dail-duty-list.component.html
+++ b/src/app/component/content/content-duty/dail-duty-list/dail-duty-list.component.html
@@ -1,21 +1,26 @@
-Dyżury:
+<p style="font-size: medium;">Dyżury na dzień {{day | date: 'd/M/yyyy'}}</p>
+
 <div *ngIf="!duties.length">
   <p> no duties to display !</p>
 </div>
 
-<div *ngIf="duties.length" class="card-list">
-  <table>
-    <tr *ngFor="let dutyType of dutyTypes" class="card-list">
-      <td>{{ dutyType.shortcut ? dutyType.shortcut : dutyType.type}}</td>
-      <table>
-        <tr *ngFor="let card of duties | filterDuty : dutyType.type" class="duty-card">
-          <td>{{ card.employeeFirstName }} {{ card.employeeLastName }}</td>
-          <td>
-            {{ card.startTime }} -
-            {{ card.endTime }}
-          </td>
-        </tr>
-      </table>
+<div *ngIf="duties.length" style="width: 100%;">
+  <table class="main-table">
+    <tr *ngFor="let dutyWrapper of duties" style="margin-bottom: 15px;">
+      <td class="type-header">
+          <p>{{dutyWrapper.dutyType.type}} </p>
+          <mat-progress-bar mode="determinate" [value]="dutyWrapper.fulfill" ></mat-progress-bar>
+      </td>
+      <td class="nested-td">
+        <div>
+          <table>
+            <tr *ngFor="let card of dutyWrapper.dutyList">
+              <td class="nested-text">{{ card.employeeFirstName }} {{ card.employeeLastName }} {{ card.startTime | slice:0:5 }} - {{ card.endTime | slice:0:5 }}</td>
+            </tr>
+          </table>
+        </div>
+        <div *ngIf="dutyWrapper.fulfill === 100"><mat-icon class="custom-icon">done_outline</mat-icon></div>
+      </td>
     </tr>
   </table>
 </div>
