--- a/src/app/component/content/content-duty/duty-acceptance/duty-acceptance.component.css
+++ b/src/app/component/content/content-duty/duty-acceptance/duty-acceptance.component.css
@@ -52,3 +52,9 @@
     align-items: center;
     flex-direction: column;
   }
+
+  .end-flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
