--- a/src/styles.css
+++ b/src/styles.css
@@ -35,5 +35,7 @@ body {
   background-color: #D2C4B6;
 }
 
-
-
+.mat-mdc-progress-bar {
+  --mdc-linear-progress-active-indicator-color: #576E5E;
+  --mdc-linear-progress-track-color: #ccc;
+}
