--- a/src/app/component/content/content-duty/duty-acceptance/duty-acceptance.component.css
+++ b/src/app/component/content/content-duty/duty-acceptance/duty-acceptance.component.css
@@ -1,3 +1,20 @@
+:host {
+  display: block;
+  background-color: #f0f0f0;
+}
+
+.header {
+  width: 100%;
+  background-color: #576E5E;
+  padding: 8px 0 8px 0;
+  color: #fff;
+  margin-bottom: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
 .row-with-margin {
   border: 1px solid #ccc;
   margin-bottom: 30px;
