--- a/src/app/component/content/content-duty/new-duty-type/new-duty-type.component.css
+++ b/src/app/component/content/content-duty/new-duty-type/new-duty-type.component.css
@@ -1,21 +1,27 @@
-form {
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    padding: 10px;
-    margin-bottom: 20px;
-  }
+:host {
+  display: block;
+  background-color: #f0f0f0;
+}
 
-  .header{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 25px;
-    padding: 10px;
-  }
+.header {
+  width: 100%;
+  background-color: #576E5E;
+  padding: 8px 0 8px 0;
+  color: #fff;
+  margin-bottom: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-  .row {
-    width: 100%;
-    display: flex; 
-    justify-content: space-between;
-    align-items: center;
-  }
+.main-flex{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.end-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
