--- a/src/app/component/content/content-home/content-home.component.html
+++ b/src/app/component/content/content-home/content-home.component.html
@@ -2,8 +2,12 @@
   <div class="button-row"> 
     <button mat-raised-button (click)="addPost()" style="margin-left: 5px; background-color: #A89985;">Nowy Post</button>
   </div>
-  <app-new-post (newPostEvent)="savePost($event)" />
+
   <mat-divider/>
+
+  <div id="admin-components">
+    <app-new-post (newPostEvent)="savePost($event)" />
+  </div>
 </section>
 
 <section *ngIf="posts$ | async as posts">
