--- a/src/app/component/content/content-home/new-post/new-post.component.css
+++ b/src/app/component/content/content-home/new-post/new-post.component.css
@@ -1,11 +1,26 @@
-.post-container {
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    padding: 15px;
-    margin-bottom: 5px;
-  }
+:host {
+  display: block;
+  background-color: #f0f0f0;
+}
+
+.header {
+  width: 100%;
+  background-color: #576E5E;
+  padding: 8px 0 8px 0;
+  color: #fff;
+  margin-bottom: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
 .quill-display{
   width: 100%;
+  background-color: white;
 }
-  
+
+.end-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
