feature_16 edit and delete duty type

--- a/src/app/component/content/content-duty/edit-duty-type/edit-duty-type-display-mode/edit-duty-type-display-mode.component.html
+++ b/src/app/component/content/content-duty/edit-duty-type/edit-duty-type-display-mode/edit-duty-type-display-mode.component.html
@@ -14,7 +14,7 @@
 
         <div>
             <button mat-raised-button (click)="sendEditEvent()" style="margin-left: 5px; width: 75px;" >Edytuj</button>
-            <button mat-raised-button style="margin-left: 5px; width: 75px;" >Usuń</button>
+            <button mat-raised-button (click)="deleteDutyType()" style="margin-left: 5px; width: 75px;" >Usuń</button>
         </div>
     </div>
 </section>
